<resources>
    <string name="app_name">Entrega de Gás</string>
    <string name="the_right_address">O endereço certo para fazer compras a qualquer hora</string>
    <string name="quality">Agora ficou muito fácil pedir seu botijão de gás ou garrafão de água.</string>
    <string name="access_wherever">Acesse de onde estiver e na hora que quiser</string>
    <string name="you_can_choose">Aqui você pode ficar à vontade</string>
    <string name="text_btn_start">Iniciar</string>
    <string name="text_btn_register">Cadastrar</string>
    <string name="text_btn_login">Login</string>
    <string name="tv_login_account">Faça login na sua conta</string>
    <string name="tv_seu_email">Seu Email</string>
    <string name="tv_sua_senha">Sua Senha</string>
    <string name="edit_text_first_name">Digite seu primeiro nome</string>
    <string name="edit_text_digite_sua_senha">Digite sua senha</string>
    <string name="edit_text_password">Sua senha</string>
    <string name="text_forget_password">Esqueceu sua senha?</string>
    <string name="text_create_account">Crie sua conta</string>
    <string name="tv_first_name">Primeiro nome</string>
    <string name="tv_last_name">Último nome</string>
    <string name="edit_text_last_name">Digite seu último nome</string>
    <string name="tv_password">Sua senha</string>
    <string name="edit_text_email">Seu email</string>
    <string name="tv_ainda_nao_tem_conta">Ainda não tem uma conta? Cadastre-se.</string>
</resources>