<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cfd3ff">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#6671fe"
                android:layout_marginTop="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/tv_login_account"/>

            <TextView
                android:id="@+id/textAindaNaoTemConta"
                android:layout_width="347dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/tv_ainda_nao_tem_conta"
                android:textAlignment="center"
                android:textColor="#6671FE"
                android:textSize="14sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:background="@drawable/gradient_background"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="32dp">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/circle" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/imageView"
                        app:layout_constraintStart_toStartOf="@+id/imageView"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/gas" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/tvEmailLogin"
                    android:layout_width="296dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/tv_seu_email"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextEmailLogin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/smallButtonHeight"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/edittext_border_background"
                    android:ems="10"
                    android:hint="@string/edit_text_email"
                    android:inputType="textEmailAddress"
                    android:padding="8dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvPasswordLogin"
                    android:layout_width="295dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/tv_password"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextPasswordLogin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/smallButtonHeight"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/edittext_border_background"
                    android:ems="10"
                    android:hint="@string/edit_text_password"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_forget_password"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/facebook" />

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/google" />

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/antigo_twitter" />
                </LinearLayout>

                <Button
                    android:id="@+id/buttonLoginLogin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/smallButtonHeight"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    app:cornerRadius="50dp"
                    android:backgroundTint="#6671fe"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="24dp"
                    android:focusable="true"
                    android:clickable="true"
                    android:textAllCaps="false"
                    android:text="@string/text_btn_login"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>