<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_introduction">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="700dp"
                android:layout_margin="16dp"
                android:background="@drawable/intro_top_background">

                <ImageView
                    android:id="@+id/ellipse"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintStart_toStartOf="@+id/guidelineEllipseLeft"
                    app:layout_constraintEnd_toEndOf="@id/guidelineEllipseRight"
                    app:layout_constraintTop_toTopOf="@id/guidelineEllipseTop"
                    app:layout_constraintBottom_toBottomOf="@id/guidelineEllipseBottom"
                    android:src="@drawable/gas"/>

                <TextView
                    android:id="@+id/tvRightAddressForShopping"
                    style="@style/h4"
                    android:layout_width="254dp"
                    android:layout_height="130dp"
                    android:text="@string/the_right_address"
                    android:textAlignment="center"
                    android:textSize="22sp"
                    app:layout_constraintBottom_toTopOf="@+id/imageView5"
                    app:layout_constraintEnd_toEndOf="@id/ellipse"
                    app:layout_constraintStart_toStartOf="@id/ellipse"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.06999999" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="0dp"
                    android:layout_height="272dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/circle_orange" />

                <TextView
                    android:id="@+id/tvQuality"
                    style="@style/h2"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:layout_width="262dp"
                    android:layout_height="99dp"
                    android:text="@string/quality"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/imageView3" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="0dp"
                    android:layout_height="167dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/circle_orange2" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineEllipseLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="20dp"
                    app:layout_constraintGuide_percent="0.15" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineEllipseRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="20dp"
                    app:layout_constraintGuide_percent="0.85" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineEllipseTop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.19" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineEllipseBottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.52" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnStart"
                    android:layout_width="@dimen/smallButtonWidth"
                    android:layout_height="@dimen/smallButtonHeight"
                    android:layout_marginBottom="32dp"
                    android:backgroundTint="@color/g_dark_blue"
                    app:cornerRadius="10dp"
                    android:text="@string/text_btn_start"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>